<resources>
    <string name="app_name">CSIT242-Project</string>
    <string name="sales">Sales</string>
    <string name="addNewSupplier">Add New Supplier</string>
    <string name="supplierName">Supplier Name</string>
    <string name="addSupplier">Add Supplier</string>
    <string name="expensesTitle">Expenses</string>
    <string name="selectMonth">Select month</string>
    <string name="handlingCosts">Handling Costs</string>
    <string name="transport">Transport</string>
    <string name="storage">Storage</string>
    <string name="bills">Bills</string>
    <string name="electricity">Electricity</string>
    <string name="water">Water</string>
    <string name="internet">Internet</string>
    <string name="paidAmountForTheMonth">Paid amount for the month</string>
    <string name="csit242Project">CSIT242 Project</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="loading">Loading...</string>
    <string name="numberOfSuppliers">Number of Suppliers</string>
    <string name="overviewOfShop">Overview of Shop</string>
    <string name="manageSuppliers">Manage Suppliers</string>
    <string name="unpaidExpenses">Unpaid Expenses</string>
    <string name="expensesAmount">AED 69,420</string>
    <string name="viewExpenses">View Expenses</string>
    <string name="recordNewSale">Record New Sale</string>
    <string name="manageTransactions">Manage Transactions</string>
    <string name="viewStatistics">View Statistics</string>
    <string name="todo">TODO</string>
    <string name="transactions">Transactions</string>
    <string name="confirmEmail">Confirm E-mail</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createAccount">Create account</string>
    <string name="totalStatistics">Total Statistics</string>
    <string name="statistics">Statistics</string>
    <string name="productsSold">Products Sold</string>
    <string name="profitRevenue">Profit and Revenue</string>
    <string name="subtotal">Subtotal:</string>
    <string name="priceBreakdown">Price Breakdown</string>
    <string name="placeholder">placeholder</string>
    <string name="totalQty">Total Qty:</string>
    <string name="purchaseFromSupplier">Purchase from Supplier</string>
    <string name="vat">VAT @ 5%:</string>
    <string name="totalDue">Total Due:</string>
    <string name="submitTransaction">Submit Transaction</string>
    <string name="removeSupplier">Remove Supplier</string>
    <string name="purchaseFromThisSupplier">Purchase from this Supplier</string>
    <string name="availableColors">Available Colors:</string>
    <string name="availableCapacities">Available Capacities:</string>
    <string name="suppliers">Suppliers</string>
    <string name="amountOfSales">Amount of Sales</string>
    <string name="lastMonthStatistics">Last Month\'s Statistics</string>
    <string name="productsSold">Products Sold</string>
</resources>