<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" android:background="@color/colorPrimaryDark">


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewSupplier"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/mainTextColor"
        android:textAlignment="center"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addSupplierActivity_supplierName_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/divider"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/supplierName"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/addSupplierActivity_supplierCategory_Spinner"
        android:layout_width="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addSupplier"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:onClick="addNewSupplier"
        android:layout_marginLeft="25dp"
        android:textColor="@color/mainTextColor"/>

</LinearLayout>